--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Swathi's Website"
+author: "Swathi Geddam"
+description: "Maintained by Swathi Geddam"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -8,21 +8,21 @@ date_format: "%B %d, %Y"
 
 # Layout
 
-show_excerpts: true        # show article excerpts on the home page
-show_frame: true           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
+show_excerpts: false        # show article excerpts on the home page
+show_frame: true          # adds a gray frame to the site
+show_sidebar: false  # show a sidebar instead of the usual header
+show_social: true #social icons
 minimal: false             # use a dark header
 
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html"}
-  - {file: "README.md"}
+  - {title: "CV", url: "/"}
+  #- {title: "
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "swathigeddam16@gmail.com"}
+  - {title: Linkedin, icon: linkedin, url: "https://www.linkedin.com/in/swathigeddam?trk=public_profile_browsemap"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
